# pytweet

./: .gitignore  CONTRIBUTING.rst  CONTRIBUTORS.md  README.md  pyproject.toml
.github/workflows/: build.yml  deploy.yml
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
docs/source/: pytweet.rst
img/: hashtag_plot.html  timeline_plot.html
pytweet/: Untitled.ipynb  pytweet.py
tests/: brunomars_data.csv  test_get_tweets.py  test_plot_hashtags.py  test_plot_timeline.py  test_pytweet.py  test_tweet_sentiment_analysis.py  test_visualize_sentiments.py  trumptweets-test.csv
