[tool.poetry]
name = "pytweet"
version = "0.1.7"
description = "Python package for text analysis and sentiment analysis on tweets"
authors = ["mmyz <yzmarco.ma@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/UBC-MDS/pytweet"
repository = "https://github.com/UBC-MDS/pytweet"
documentation = 'https://pytweet-ubcmds.readthedocs.io'

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.2.3"
altair = "^4.1.0"
DateTime = "^4.3"
tweepy = "^3.10.0"
textblob = "^0.15.3"
sklearn = "^0.0"
nltk = "3.5"
python-semantic-release = "^7.15.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"
pytest-cov = "^2.11.1"
codecov = "^2.1.11"
python-semantic-release = "^7.15.0"
flake8 = "^3.8.4"
Sphinx = "^3.5.1"
sphinxcontrib-napoleon = "^0.7"
nbsphinx = "^0.8.2"
ipykernel = "^5.5.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.semantic_release]
version_variable = "pytweet/__init__.py:__version__"
version_source = "commit"
upload_to_pypi = "false"
patch_without_tag = "true"
